--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chrissna-khiev-website",
   "version": "0.1.0",
-  "homepage": "https://ChrissnaKhiev.github.io/",
+  "homepage": "https://ChrissnaKhiev.github.io/chrissna-khiev-website",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
